# pulput-ink-android

./: .env.example  .gitignore  README.md  debug.keystore.base64  metadata.json  settings.gradle.kts
.build-outputs/: PulpitInk-v1.2.0-vc3-release-notes.txt  PulpitInk-v1.3.0-vc4-release-notes.txt  PulpitInk-v1.3.1-vc5-release-notes.txt  PulpitInk-v1.4.0-vc6-release-notes.txt  PulpitInk-v1.6.0-vc8-release-notes.txt  PulpitInk-v1.6.1-vc9-release-notes.txt
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/io/pulpit/ink/: ExampleInstrumentedTest.kt  (+1 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ko/: strings.xml
base_model/: build.gradle.kts
docs/: RELEASE_GUIDE.md  index.html  privacy-policy.html
gradle/: libs.versions.toml
play-console/: README.md  app-content.md  assets-checklist.md  content-rating.md  data-safety.md  github-pages-setup.md  privacy-policy.md  store-listing-en.md  store-listing-ko.md
play-console/assets/: generate_assets.py
play-console/release-notes/: 1.1.0-en-US.txt  1.1.0-ko-KR.txt  1.2.0-en-US.txt  1.2.0-ko-KR.txt  1.3.0-en-US.txt  1.3.0-ko-KR.txt  1.3.1-en-US.txt  1.3.1-ko-KR.txt  1.4.0-en-US.txt  1.4.0-ko-KR.txt  1.5.0-en-US.txt  1.5.0-ko-KR.txt  1.6.0-en-US.txt  1.6.0-ko-KR.txt  1.6.1-en-US.txt  1.6.1-ko-KR.txt  1.7.0-en-US.txt  1.7.0-ko-KR.txt  1.8.0-ko-KR.txt  1.8.1-en-US.txt  1.8.1-ko-KR.txt
scripts/: export_play_console_assets.ps1  fetch-base-model.ps1
(+51 files in other folders)
